# Winsentials

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  AGENTS.md  CHANGELOG.md  README.md  _typos.toml  components.json  eslint.config.js  fallow.toml  index.html  justfile  lint-staged.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vexp.toml  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: Symlinker.cmd  Winapp2.ini
src-tauri/capabilities/: default.json  windows-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: com.rs  discord_presence.rs  error.rs  lib.rs  main.rs  system_info.rs  wmi_queries.rs
src-tauri/src/autostart/: critical.rs  file_info.rs  folder.rs  icons.rs  mod.rs  registry.rs  services.rs  tasks.rs  types.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/cleanup/: mod.rs  targets.rs  trustedinstaller.rs  types.rs  winapp.rs
src-tauri/src/commands/: cleanup.rs  discord_presence.rs  mod.rs  startup.rs  system.rs  system_info.rs  tweaks.rs  window.rs
src-tauri/src/registry/: mod.rs
src-tauri/src/shell/: mod.rs
src-tauri/src/startup/: disabled_store.rs  mod.rs  presentation.rs  registry.rs  scheduled_tasks.rs  shell_hosts.rs  startup_folder.rs  types.rs
src-tauri/src/system_info/: live_info.rs  mod.rs  network_filter.rs  state.rs  static_info.rs  types.rs
src-tauri/src/system_info/windows/: cpu.rs  disk.rs  gpu.rs  hardware.rs  mod.rs  network.rs  ram.rs  windows_info.rs
src-tauri/src/tweaks/: mod.rs  registry.rs
src-tauri/src/tweaks/appearance/: classic_context_menu.rs  disable_shortcut_arrows.rs  disable_transparency.rs  disable_wallpaper_jpeg_compression.rs  fast_taskbar_thumbnails.rs  faster_cursor_blink_rate.rs  hide_explorer_gallery.rs  hide_explorer_home.rs  hide_gallery_navigation_pane.rs  hide_home_navigation_pane.rs  hide_network_navigation_pane.rs  mod.rs  remove_shortcut_arrows.rs  remove_shortcut_suffix.rs
src-tauri/src/tweaks/behaviour/: disable_8dot3_name_creation.rs  disable_recent_items_and_frequent_places.rs  disable_startup_delay.rs  mod.rs  open_explorer_to_this_pc.rs  unlock_lock_screen_timeout_setting.rs
src-tauri/src/tweaks/context_menu/: create_symbolic_link.rs  mod.rs  take_ownership.rs
src-tauri/src/tweaks/debloat/: block_razer_auto_install.rs  browser_policy.rs  disable_copilot.rs  mod.rs  remove_microsoft_edge.rs  remove_onedrive.rs
src-tauri/src/tweaks/hardware/: device_affinity.rs  mod.rs  msi_mode.rs
src-tauri/src/tweaks/input/: csrss_high_priority.rs  csrss_priority.rs  disable_ctf_ctfmon.rs  disable_mouse_acceleration.rs  fast_keyboard_repeat.rs  filter_keys.rs  mod.rs  mouse_acceleration_fix.rs  raw_mouse_throttle.rs
src-tauri/src/tweaks/memory/: clear_pagefile_shutdown.rs  disable_fault_tolerant_heap.rs  disable_fth.rs  disable_page_combining.rs  disable_paging_executive.rs  heap_decommit.rs  large_system_cache.rs  mod.rs  svchost_split_threshold.rs
src-tauri/src/tweaks/network/: disable_llmnr.rs  disable_nagle.rs  disable_ncsi.rs  disable_ncsi_active_probing.rs  disable_ndu.rs  disable_qos_bandwidth_limit.rs  disable_qos_reserve.rs  disable_teredo.rs  dns_cache.rs  enable_bbr2.rs  enable_network_offloading.rs  fast_udp_optimization.rs  increase_port_range.rs  mod.rs  native.rs  network_throttling.rs  tcp_no_delay.rs
src-tauri/src/tweaks/performance/: configure_kernel_timing_chain.rs  disable_fault_tolerant_heap.rs  disable_game_dvr.rs  mod.rs  optimize_mmcss.rs
src-tauri/src/tweaks/privacy/: app_privacy_tweaks.rs  disable_activity_feed.rs  disable_advertising.rs  disable_app_compat.rs  disable_ceip.rs  disable_cloud_search.rs  disable_cloud_sync.rs  disable_compat_appraiser.rs  disable_consumer_features.rs  disable_cortana.rs  disable_dotnet_telemetry.rs  disable_handwriting.rs  disable_input_data_collection.rs  disable_recall.rs  (+22 more)
src-tauri/src/utils/: command.rs
(+199 files in other folders)
