[package]
name = "winsentials"
version = "0.1.1"
description = "A sleek Windows 10/11 tweaker"
authors = [ "Noktomezo <noktomezo@duck.com>" ]
edition = "2024"

[lib]
name = "winsentials_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[profile.release]
overflow-checks = false
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "2.0.18"
winreg = "0.55.0"
window-vibrancy = "0.7.1"
tauri-plugin-clipboard-manager = "2.3.2"

[target."cfg(windows)".dependencies]
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
