[package]
name = "winsentials"
version = "0.1.2"
description = "A sleek Windows 10/11 tweaker"
authors = [ "Noktomezo <noktomezo@duck.com>" ]
edition = "2024"

[lib]
name = "winsentials_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[profile.release]
overflow-checks = false
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
lto = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "2.0.18"
winreg = "0.56.0"
window-vibrancy = "0.7.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-store = "2"
rayon = "1.11.0"
tauri-plugin-prevent-default = "4.0.4"
sysinfo = "0.38"

[target."cfg(windows)".dependencies]
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
wmi = "0.18"
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Performance",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_Graphics_Dxgi",
  "Wdk_Graphics_Direct3D",
] }
